--- a/docker_web/templates/index.html
+++ b/docker_web/templates/index.html
@@ -17,7 +17,7 @@
     <body>
 
         <h1>Sentiment Analyser</h1>
-        <h3> The web container as been succesfully created and you reached it </h3>
+        <h3> You are not shure of your sentence's sentiment , eel free to write it in english and we will analyse it for you UwU </h3>
         
         <form method="POST">
             <textarea name="text" placeholder="Please wright the sentence you want to be analyse" rows="10" cols="100"></textarea><br><br>
