--- a/docker_web/templates/index.html
+++ b/docker_web/templates/index.html
@@ -17,17 +17,24 @@
     <body>
 
         <h1>Sentiment Analyser</h1>
-        <h3> You are not shure of your sentence's sentiment , eel free to write it in english and we will analyse it for you UwU </h3>
-        
+        <h3> You are not sure of your sentences sentiment, please analyse it here </h3>
+        <h5> The sentiment analyser only take english sentences </h5>
+
         <form method="POST">
             <textarea name="text" placeholder="Please wright the sentence you want to be analyse" rows="10" cols="100"></textarea><br><br>
-            <input class="example_a" type="submit" value="Analyse">
+            <input type="submit" value="Analyse">
         </form>
 
         {% if final %} <!-- We print this part only if we already have a response -->
         <div>
             <h3>Your sentence : </h3>{{ text }}
-            <h3> The sentiment is {{ final }} !</h3>
+            <h3> The sentiment is overvall {{ final }} !</h3>
+
+            <h5> The Detail is below : </h5>
+            {{ neg }}
+            {{ neut }}
+            {{ pos }}
+
             {% else %}
             <p></p>
             {% endif %}
